Initial version built clean with dot net core 2.0

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,1 @@
-obj/Debug/netcoreapp1.1/blade.dll
-obj/Debug/netcoreapp1.1/blade.pdb
-obj/Debug/netcoreapp1.1/CoreCompileInputs.cache
-obj/Debug/netcoreapp1.1/blade.csproj.FileListAbsolute.txt
+obj/*.*
