--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# How do you make this file work?
+
+**/bin/Debug/netcoreapp2.0/blade.dll
 *.dll
 *.cache
 *.pdb
+bin/Debug/netcoreapp2.0/*.dll
+bin/Debug/netcoreapp2.0/*.pdb
+obj/Debug/netcoreapp2.0/*.dll
+obj/Debug/netcoreapp2.0/*.pdb
